优化升级RAG架构
